--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
     "react-scripts": "^4.0.3"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.46.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "aws-amplify": "^4.3.12",
     "react": "^17.0.2",
     "react-async": "^10.0.1",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "typescript": "^4.5.4",
+    "web-vitals": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
